# neckenml-analyzer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  check_setup.py  docker-compose.yml  docker-run.sh  optimized_params.json  pyproject.toml  pytest.ini  requirements.txt  threshold_tuning.ipynb
.github/workflows/: ci.yml  release.yml  test.yml
docs/: artifact_persistence.md  extending.md  installation.md  quickstart.md
examples/: artifact_persistence_example.py
neckenml/: __init__.py
neckenml/analyzer/: __init__.py  audio_analyzer.py  folk_authenticity.py  reanalysis.py
neckenml/analyzer/extractors/: feel.py  rhythm.py  swing.py  vocal.py
neckenml/classifier/: __init__.py  style_classifier.py  style_head.py
neckenml/models/: __init__.py  schema.py
neckenml/models/pretrained/: custom_style_head.pkl
neckenml/sources/: __init__.py  file_source.py
neckenml/training/: __init__.py  trainer.py
neckenml_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: README.md  analyze_eval_features.py  auto_tune_classifier.py  evaluate_classification.py  rerun_classification.py  visualize_confusion_matrix.py
test_data/: README.md  evaluation_results.json  known_issues.yaml  test_tracks copy.yaml  test_tracks_template.yaml
tests/: __init__.py  conftest.py  test_artifact_persistence.py  test_parameterization.py
tests/analyzer/: __init__.py  test_imports.py
tests/core/: __init__.py  test_folk_authenticity.py  test_imports.py  test_reanalysis.py
